--- a/vuejs6/src/layout/markdown/md1.css
+++ b/vuejs6/src/layout/markdown/md1.css
@@ -2,24 +2,27 @@
 .markdown {
   /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif; */
   font-family: Consolas;
-  line-height: 1.6;
+  line-height: 1.2;
   color: #333;
 }
 
-.markdown h1,
-.markdown h2,
-.markdown h3 {
-  color: #24292e !important;
-  border-bottom: 1px solid #a7a7a7 !important;
+.markdown h1 {
+  color: #000000 !important;
+  font-size: 20px;
+  margin-top: 8px;
+  /* border-bottom: 1px solid #a7a7a7 !important; */
+}
+
+.markdown ul li {
+  margin-left: 8px !important;
 }
 
 .markdown pre {
   background-color: #dfdede !important;
   padding: 12px !important;
-  border-radius: 6px !important;
- 
+  border-radius: 8px !important;
 
-  width:100% !important;
+  width: 100% !important;
   overflow-x: auto !important;
   overflow-y: auto !important;
   min-width: 800px !important;
@@ -41,7 +44,4 @@
   padding: 0 !important;
   margin: 0 !important;
   font-family: Consolas !important;
-}
-.markdown ul li {
-  margin-left: 10px !important;
 }
